# Hakaze.Build

./: .gitignore  Directory.Build.props  Directory.Packages.props  Hakaze.Build.slnx  README.md
.codex/: config.toml
samples/Hakaze.Build.Generator.Sample/: Hakaze.Build.Generator.Sample.csproj  SampleProperties.cs  SampleTargets.cs  packages.lock.json
src/managed/Hakaze.Build.Abstractions/: ConfigId.cs  ExecutionResult.cs  IBuilding.cs  IConfig.cs  IEvaluatedBuilding.cs  IModule.cs  IProject.cs  ITarget.cs  ITargetFactory.cs  Profile.cs  ProfileExtensions.cs  ProjectId.cs  Property.cs  PropertyExtensions.cs  TargetExtensions.cs  TargetId.cs  TargetName.cs  TargetSource.cs
src/managed/Hakaze.Build.Cli/: Build.cs  CmdHelper.cs  Hakaze.Build.Cli.csproj  Program.cs  packages.lock.json
src/native/hkz/: Cargo.toml
src/native/hkz/src/: main.rs
tests/Hakaze.Build.Core.Tests/: BasicTests.cs  BuildingBuilderTests.cs  Calculator.cs  DataDrivenTests.cs  DependencyInjectionTests.cs  EvaluatedBuildExtensionsTests.cs  EvaluatedBuildingBuilderTests.cs  Hakaze.Build.Core.Tests.csproj  HooksAndLifecycle.cs  TargetBuilderTests.cs  packages.lock.json
tests/Hakaze.Build.Generator.Tests/: Hakaze.Build.Generator.Tests.csproj  OptionExportGeneratorTests.cs  TargetExportGeneratorTests.cs  packages.lock.json
tests/Hakaze.Build.IO.Tests/: HPathTests.cs  Hakaze.Build.IO.Tests.csproj  packages.lock.json
tests/Hakaze.Build.Utility.Tests/: CSharpStringLiteralTests.cs  Hakaze.Build.Utility.Tests.csproj  NamingConventionTests.cs  packages.lock.json
(+36 files in other folders)
