[package]
name = "hkz"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
blake3 = { version = "1.8", features = ["rayon"] }
dunce = "1.0"
ignore = "0.4"
rayon = "1.11"
roxmltree = "0.21"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3.23"
